manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: image-pvc
      containers:
        - name: todo-app
          image: PROJECT/IMAGE
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/img
          resources:
            limits:
              memory: 500Mi
              cpu: "0.5"
