manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-app-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  strategy:
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
              - templateName: cpu-usage-rate
        - pause:
            duration: 30s
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: image-pvc
      containers:
        - name: todo-app
          image: PROJECT/IMAGE
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/img
          resources:
            limits:
              memory: 500Mi
              cpu: 500m
