manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: todo
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
